--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 	<main class="main">
 		@@include('components/bem-blocks/global/catalog-nav/catalog-nav.html')
 		@@include('components/bem-blocks/global/our-news/our-news.html')
+		@@include('components/bem-blocks/global/map/map.html')
 	</main>
 	@@include('components/page/_3_footer.html')
 	@@include('components/page/_4_scripts.html')
