add new component

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 	@@include('components/page/_2_header.html')
 	<main class="main">
 		@@include('components/bem-blocks/global/catalog-nav/catalog-nav.html')
+		@@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html')
 		@@include('components/bem-blocks/global/our-news/our-news.html')
 		@@include('components/bem-blocks/global/map/map.html')
 	</main>
