--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 		@@include('components/bem-blocks/global/catalog-nav/catalog-nav.html')
 		@@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html')
 		@@include('components/bem-blocks/global/reviews/reviews.html')
+		@@include('components/bem-blocks/global/subscribe-block/subscribe-block.html')
 		@@include('components/bem-blocks/global/map/map.html')
 		@@include('components/bem-blocks/global/our-news/our-news.html')
 	</main>
