--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
 		@@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html')
 		@@include('components/bem-blocks/global/reviews/reviews.html')
 		@@include('components/bem-blocks/global/subscribe-block/subscribe-block.html')
+		@@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
+		   'title': 'заборы',
+           'class': 'product-slider'
+		})
 		@@include('components/bem-blocks/global/map/map.html')
 		@@include('components/bem-blocks/global/our-news/our-news.html')
 	</main>
