--- a/src/index.html
+++ b/src/index.html
@@ -219,6 +219,7 @@
 			</div>
 		</section>
 		@@include('components/bem-blocks/global/video-block/video-block.html')
+		@@include('components/bem-blocks/global/stages-installation/stages-installation.html')
 		@@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html')
 		@@include('components/bem-blocks/global/reviews/reviews.html')
 		@@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
