--- a/src/index.html
+++ b/src/index.html
@@ -220,6 +220,7 @@
 		</section>
 		@@include('components/bem-blocks/global/video-block/video-block.html')
 		@@include('components/bem-blocks/global/stages-installation/stages-installation.html')
+		@@include('components/bem-blocks/global/portfolio-block/portfolio-block.html')
 		@@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html')
 		@@include('components/bem-blocks/global/reviews/reviews.html')
 		@@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
