mobile version of calculator is ready

--- a/src/index.html
+++ b/src/index.html
@@ -222,6 +222,12 @@
 		@@include('components/bem-blocks/global/stages-installation/stages-installation.html')
 		@@include('components/bem-blocks/global/portfolio-block/portfolio-block.html')
 		@@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html')
+		<section class="main-calculator">
+			<div class="container">
+				<div class="main-calculator__title">Расчет стоимости</div>
+			</div>
+			@@include('components/bem-blocks/global/calculator/calculator.html')
+		</section>
 		@@include('components/bem-blocks/global/reviews/reviews.html')
 		@@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
 		   'class': 'mt'
