--- a/src/index.html
+++ b/src/index.html
@@ -54,166 +54,168 @@
 		@@include('components/bem-blocks/global/catalog-nav/catalog-nav.html')
 		<section class="catalog-banner">
 			<div class="container">
-				<div class="catalog-banner__container">
-					<div class="catalog-banner__item">
-						<h1 class="catalog-banner__title font-normal"><span class="font-bold">Каталог заборов</span> с установкой под ключ</h1>
-						<div class="catalog-banner__content">
-							<p>Наша компания специализируется на строительстве заборов полностью под ключ.</p>
-							<p>Собственное производство, постоянный штат рабочих и оптимизированная логистика позволяет продавать заборы по выгодной цене без ущерба для качества. Мы являемся обладателем более 15 патентов.</p>
-							<p>"Заборкин" ограждает от забот! Доверьте установку ограждения специалистам компании!</p>
-							<p>Мы занимаемся изготовлением и монтажом ворот для частных домов и объектов промышленного назначения. Принимаем заказы на установку ворот с автоматикой и без нее.</p>
+				<div class="catalog-banner__wrapper">
+					<div class="catalog-banner__container">
+						<div class="catalog-banner__item">
+							<h1 class="catalog-banner__title font-normal"><span class="font-bold">Каталог заборов</span> с установкой под ключ</h1>
+							<div class="catalog-banner__content">
+								<p>Наша компания специализируется на строительстве заборов полностью под ключ.</p>
+								<p>Собственное производство, постоянный штат рабочих и оптимизированная логистика позволяет продавать заборы по выгодной цене без ущерба для качества. Мы являемся обладателем более 15 патентов.</p>
+								<p>"Заборкин" ограждает от забот! Доверьте установку ограждения специалистам компании!</p>
+								<p>Мы занимаемся изготовлением и монтажом ворот для частных домов и объектов промышленного назначения. Принимаем заказы на установку ворот с автоматикой и без нее.</p>
+							</div>
 						</div>
-					</div>
-					<div class="catalog-banner__item">
-						<ul class="catalog-banner__catalog-list">
-							<li class="catalog-banner__catalog-list__item catalog-banner__catalog-list__item--large start">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__container">
-										<div class="catalog-banner__catalog-list__title">Металлические заборы</div>
-										<div class="catalog-banner__catalog-list__text">Ограждения из стального листа, профилированного с помощью холодного проката с полимерным покрытием.</div>
+						<div class="catalog-banner__item">
+							<ul class="catalog-banner__catalog-list">
+								<li class="catalog-banner__catalog-list__item catalog-banner__catalog-list__item--large start">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__container">
+												<div class="catalog-banner__catalog-list__title">Металлические заборы</div>
+												<div class="catalog-banner__catalog-list__text">Ограждения из стального листа, профилированного с помощью холодного проката с полимерным покрытием.</div>
+											</div>
 										</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-1.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item catalog-banner__catalog-list__item--large end">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__container">
-											<div class="catalog-banner__catalog-list__title">Деревянные заборы</div>
-											<div class="catalog-banner__catalog-list__text">Заборы из равномерно расположенных вертикальных досок.</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-1.png" class="lazy" alt="catalog">
 										</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-2.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Заборы из пластика</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-3.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Заборы с монолитным основанием</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-4.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Быстровозводимые заборы</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-5.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Заборы для дачи</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-6.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Заборы из камня</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-7.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Заборы из сэндвич панелей</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-8.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Кованые заборы</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-9.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Комби заборы</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-10.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Рулонные заборы</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-11.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Сварные заборы</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-12.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Секционные заборы</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-13.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-							<li class="catalog-banner__catalog-list__item">
-								<a href="#">
-									<div class="catalog-banner__catalog-list__content">
-										<div class="catalog-banner__catalog-list__title">Шумозащитные заборы и экраны</div>
-									</div>
-									<div class="catalog-banner__catalog-list__img">
-										<img data-src="img/global/menu/item-13.png" class="lazy" alt="catalog">
-									</div>
-								</a>
-							</li>
-						</ul>
-						<a href="#" class="btn catalog-banner__link">Полный каталог</a>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item catalog-banner__catalog-list__item--large end">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__container">
+												<div class="catalog-banner__catalog-list__title">Деревянные заборы</div>
+												<div class="catalog-banner__catalog-list__text">Заборы из равномерно расположенных вертикальных досок.</div>
+											</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-2.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Заборы из пластика</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-3.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Заборы с монолитным основанием</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-4.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Быстровозводимые заборы</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-5.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Заборы для дачи</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-6.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Заборы из камня</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-7.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Заборы из сэндвич панелей</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-8.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Кованые заборы</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-9.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Комби заборы</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-10.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Рулонные заборы</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-11.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Сварные заборы</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-12.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Секционные заборы</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-13.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+								<li class="catalog-banner__catalog-list__item">
+									<a href="#">
+										<div class="catalog-banner__catalog-list__content">
+											<div class="catalog-banner__catalog-list__title">Шумозащитные заборы и экраны</div>
+										</div>
+										<div class="catalog-banner__catalog-list__img">
+											<img data-src="img/global/menu/item-13.png" class="lazy" alt="catalog">
+										</div>
+									</a>
+								</li>
+							</ul>
+							<a href="#" class="btn catalog-banner__link">Полный каталог</a>
+						</div>
 					</div>
 				</div>
 			</div>
