advantages block is ready

--- a/src/catalog-metal.html
+++ b/src/catalog-metal.html
@@ -610,6 +610,8 @@
         </div>
     </section>
     @@include('components/bem-blocks/global/our-advantages/our-advantages.html')
+    @@include('components/bem-blocks/global/portfolio-block/portfolio-block.html')
+
     @@include('components/bem-blocks/global/map/map.html')
     @@include('components/bem-blocks/global/our-news/our-news.html')
 </main>
