--- a/src/catalog-fence.html
+++ b/src/catalog-fence.html
@@ -248,7 +248,7 @@
         </div>
     </section>
     @@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
-    'title': 'заборы',
+    'title': '<span class="font-bold">Популярные</span> заборы',
     'class': 'product-slider'
     })
     <section class="catalog-fence-subscribe">
