--- a/src/index.html
+++ b/src/index.html
@@ -237,7 +237,7 @@
 		   'class': 'mt'
 		})
 		@@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
-		   'title': 'заборы',
+		   'title': '<span class="font-bold">Популярные</span> заборы',
            'class': 'product-slider'
 		})
 		@@include('components/bem-blocks/global/contact-action/contact-action.html')
