add structure for new page

--- a/src/catalog-metal.html
+++ b/src/catalog-metal.html
@@ -496,7 +496,7 @@
     title: '<span class="font-bold">Описание процесса</span> и сроки'
     })
     @@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html',{
-     class: 'gray-bg'
+     class: 'grey-bg'
     })
     @@include('components/bem-blocks/global/colors-block/colors-block.html')
     <section class="catalog-metal-variants">
