add select to calc block

--- a/src/product-fence.html
+++ b/src/product-fence.html
@@ -565,6 +565,7 @@
             </ul>
         </div>
     </section>
+    @@include('components/bem-blocks/global/product-calculator/product-calculator.html')
     @@include('components/bem-blocks/global/portfolio-block/portfolio-block.html')
     @@include('components/bem-blocks/global/our-advantages/our-advantages.html')
     @@include('components/bem-blocks/global/reviews/reviews.html')
