--- a/src/product-fence.html
+++ b/src/product-fence.html
@@ -566,7 +566,36 @@
         </div>
     </section>
     @@include('components/bem-blocks/global/product-calculator/product-calculator.html')
-    @@include('components/bem-blocks/global/portfolio-block/portfolio-block.html')
+    <section class="product-fence-steps">
+        <div class="container">
+            <h2 class="product-fence__title font-normal"><span class="font-bold">Технология</span>  установки забора-жалюзи</h2>
+            <ul class="steps-list">
+                <li class="steps-list__item">
+                    <div class="steps-list__content">
+                        Вы оставляете заявку на сайте или по бесплатной линии
+                        <a href="tel:88007073501">8 (800) 707-35-01</a>
+                    </div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">
+                        Специалист связывается с Вами для уточнения деталей и выставляет счет на оплату согласно заявке.
+                    </div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">Вы проверяете и оплачиваете счет прямо на сайте без комиссий, либо по реквизитам в счете.</div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">Производство заказа за 1 день! Тщательная упаковка груза по местам.</div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">Отправка транспортной компанией или самовывоз из ближайшего филиала сети!</div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    @@include('components/bem-blocks/global/portfolio-block/portfolio-block.html',{
+       class: 'white-bg'
+    })
     @@include('components/bem-blocks/global/our-advantages/our-advantages.html')
     @@include('components/bem-blocks/global/reviews/reviews.html')
     @@include('components/bem-blocks/global/contact-action/contact-action.html')
