--- a/src/product-fence.html
+++ b/src/product-fence.html
@@ -568,7 +568,7 @@
     @@include('components/bem-blocks/global/product-calculator/product-calculator.html')
     <section class="product-fence-steps">
         <div class="container">
-            <h2 class="product-fence__title font-normal"><span class="font-bold">Технология</span>  установки забора-жалюзи</h2>
+            <h2 class="product-fence-steps__title font-normal"><span class="font-bold">Технология</span>  установки забора-жалюзи</h2>
             <ul class="steps-list">
                 <li class="steps-list__item">
                     <div class="steps-list__content">
