Catalog gates is ready

--- a/src/catalog-gates.html
+++ b/src/catalog-gates.html
@@ -947,133 +947,43 @@
                 </div>
             </div>
     </section>
-
-    @@include('components/bem-blocks/global/stages-installation/stages-installation.html',{
-    title: '<span class="font-bold">Описание процесса</span> и сроки'
-    })
-    @@include('components/bem-blocks/global/stages-cooperation/stages-cooperation.html',{
-    class: 'grey-bg'
-    })
-    @@include('components/bem-blocks/global/colors-block/colors-block.html')
-    <section class="catalog-metal-variants">
+    <section class="catalog-gates-advantages">
         <div class="container">
-            <h2 class="catalog-metal-variants__title font-normal"><span class="font-bold">Варианты</span> установки забора</h2>
-            <div class="catalog-metal-variants__description">
-                <p>Монтаж забора на участке осуществляется в следующей последовательности:
-                    Строительство фундамента (на плывучих и слабых грунтах).
-                    Разметка площадки с установкой колышков на месте будущего монтажа опорных столбов. При работе с грунтом используются буры, позволяющие выполнить качественное заглубление опоры.</p>
-            </div>
-            <ul class="catalog-metal-variants__list">
-                <li class="catalog-metal-variants__list-item">
-                    <a href="#" class="catalog-metal-variants__list-img">
-                        <img data-src="img/catalog-metal/variants/item-1.jpg" class="lazy" alt="product">
-                    </a>
-                    <header class="catalog-metal-variants__list-header">
-                        <a href="#" class="catalog-metal-variants__list-title">Забутовка столбов</a>
-                        <div class="catalog-metal-variants__list-price">От <b>1159₽</b> за шт.</div>
-                    </header>
-                    <footer class="catalog-metal-variants__list-footer">
-                        <button class="btn btn-action btn-open-popup-call catalog-metal-variants__list-btn" data-title="Забутовка столбов">Заказать</button>
-                        <a href="#" class="catalog-metal-variants__list-more">Подробнее</a>
-                    </footer>
-                </li>
-                <li class="catalog-metal-variants__list-item">
-                    <a href="#" class="catalog-metal-variants__list-img">
-                        <img data-src="img/catalog-metal/variants/item-2.jpg" class="lazy" alt="product">
-                    </a>
-                    <header class="catalog-metal-variants__list-header">
-                        <a href="#" class="catalog-metal-variants__list-title">Винтовые сваи</a>
-                        <div class="catalog-metal-variants__list-price">От <b>1159₽</b> за шт.</div>
-                    </header>
-                    <footer class="catalog-metal-variants__list-footer">
-                        <button class="btn btn-action btn-open-popup-call catalog-metal-variants__list-btn" data-title="Винтовые сваи">Заказать</button>
-                        <a href="#" class="catalog-metal-variants__list-more">Подробнее</a>
-                    </footer>
-                </li>
-                <li class="catalog-metal-variants__list-item">
-                    <a href="#" class="catalog-metal-variants__list-img">
-                        <img data-src="img/catalog-metal/variants/item-3.jpg" class="lazy" alt="product">
-                    </a>
-                    <header class="catalog-metal-variants__list-header">
-                        <a href="#" class="catalog-metal-variants__list-title">Ленточный фундамент</a>
-                        <div class="catalog-metal-variants__list-price">От <b>1159₽</b> за шт.</div>
-                    </header>
-                    <footer class="catalog-metal-variants__list-footer">
-                        <button class="btn btn-action btn-open-popup-call catalog-metal-variants__list-btn" data-title="Ленточный фундамент">Заказать</button>
-                        <a href="#" class="catalog-metal-variants__list-more">Подробнее</a>
-                    </footer>
-                </li>
-            </ul>
-            @@include('components/bem-blocks/global/advantages/advantages.html',{
-            class: 'catalog-metal__advantages'
-            })
-        </div>
-    </section>
-    <section class="catalog-metal-about">
-        <div class="container">
-            <h2 class="catalog-metal-about__title font-normal"><span class="font-bold">Что нужно знать</span> о заборах</h2>
-            <div class="catalog-metal-about__content">
-                <p>Монтаж забора на участке осуществляется в следующей последовательности: Строительство фундамента (на плывучих и слабых грунтах). Разметка площадки с установкой колышков на месте будущего монтажа опорных столбов. При работе с грунтом используются буры, позволяющие выполнить качественное заглубление опоры.</p>
-                <ul class="checked-list">
-                    <li class="checked-list__item"><i class="far fa-check-circle"></i>
-                        <div class="checked-list__content"><b>Надежность.</b> Металлический секционный забор служит защитой участка от любопытных глаз и посторонних. В отличие от глухих секций еврожалюзи имеют низкую парусность, а опоры с квадратным сечением обеспечивают устойчивость конструкции к боковым нагрузкам. Такое ограждение устоит даже при сильных порывах ветра, не сломается и не погнется.</div>
-                    </li>
-                    <li class="checked-list__item">
-                        <i class="far fa-check-circle"></i>
-                        <div class="checked-list__content"><b>Устойчивость к внешним факторам.</b> Оцинкованная сталь с полимерным покрытием не боится коррозии, перепадов температуры, воздействия влаги и химически активных сред. Забор еврожалюзи сохраняет первоначальный вид в течение всего срока эксплуатации.</div>
-                    </li>
-                    <li class="checked-list__item">
-                        <i class="far fa-check-circle"></i>
-                        <div class="checked-list__content"><b>Эстетичность.</b> Заборы с горизонтально расположенными ламелями и текстурированным покрытием выглядят красиво и аккуратно. Широкий выбор цветов и оттенков позволяет подобрать материал для забора, который будет гармонировать с отделкой фасада дома и идеально впишется в окружающий ландшафт.</div>
-                    </li>
-                    <li class="checked-list__item">
-                        <i class="far fa-check-circle"></i>
-                        <div class="checked-list__content"><b>Практичность.</b> Ограждения не нужно каждый год красить — покрытие не выгорает на солнце, не шелушится от дождя и мороза. Достаточно по мере необходимости смывать пыль и грязь с поверхности. Делать это можно обычной водой из шланга</div>
-                    </li>
-                    <li class="checked-list__item">
-                        <i class="far fa-check-circle"></i>
-                        <div class="checked-list__content"><b>Ремонтопригодность.</b> В случае деформации нескольких ламелей не нужно менять всю секцию. Достаточно открутить саморезы на нужном участке, убрать погнутые планки, поставить новые и закрутить саморезы.</div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <section class="catalog-metal-steps">
-        <div class="container">
-            <h2 class="catalog-metal-steps__title font-normal"><span class="font-bold">Технология</span>  установки забора-жалюзи</h2>
-            <ul class="steps-list">
-                <li class="steps-list__item">
-                    <div class="steps-list__content">
-                        Вы оставляете заявку на сайте или по бесплатной линии
-                        <a href="tel:88007073501">8 (800) 707-35-01</a>
+            <ul class="catalog-gates-advantages__list">
+                <li class="catalog-gates-advantages__list-item">
+                    <div class="catalog-gates-advantages__list-img">
+                        <img data-src="img/catalog-gates/advantages/item-1.svg" class="lazy" alt="advantages">
                     </div>
+                    <div class="catalog-gates-advantages__list-title">Изготовим за 1 день!</div>
+                    <div class="catalog-gates-advantages__list-text">Нужная информация: общая длина забора, количество ворот и калиток, способ установки столбов, вид материала обшивки каркаса, адрес места монтажа, дополнительные работы.</div>
                 </li>
-                <li class="steps-list__item">
-                    <div class="steps-list__content">
-                        Специалист связывается с Вами для уточнения деталей и выставляет счет на оплату согласно заявке.
+                <li class="catalog-gates-advantages__list-item">
+                    <div class="catalog-gates-advantages__list-img">
+                        <img data-src="img/catalog-gates/advantages/item-2.svg" class="lazy" alt="advantages">
                     </div>
+                    <div class="catalog-gates-advantages__list-title">Выезд инженера на замер бесплатно!</div>
+                    <div class="catalog-gates-advantages__list-text">Нужная информация: общая длина забора, количество ворот и калиток, способ установки столбов, вид материала обшивки каркаса, адрес места монтажа, дополнительные работы.</div>
                 </li>
-                <li class="steps-list__item">
-                    <div class="steps-list__content">Вы проверяете и оплачиваете счет прямо на сайте без комиссий, либо по реквизитам в счете.</div>
-                </li>
-                <li class="steps-list__item">
-                    <div class="steps-list__content">Производство заказа за 1 день! Тщательная упаковка груза по местам.</div>
-                </li>
-                <li class="steps-list__item">
-                    <div class="steps-list__content">Отправка транспортной компанией или самовывоз из ближайшего филиала сети!</div>
+                <li class="catalog-gates-advantages__list-item">
+                    <div class="catalog-gates-advantages__list-img">
+                        <img data-src="img/catalog-gates/advantages/item-3.svg" class="lazy" alt="advantages">
+                    </div>
+                    <div class="catalog-gates-advantages__list-title">Оперативный ремонт!</div>
+                    <div class="catalog-gates-advantages__list-text">Нужная информация: общая длина забора, количество ворот и калиток, способ установки столбов, вид материала обшивки каркаса, адрес места монтажа, дополнительные работы.</div>
                 </li>
             </ul>
         </div>
     </section>
-    @@include('components/bem-blocks/global/our-advantages/our-advantages.html')
-    @@include('components/bem-blocks/global/portfolio-block/portfolio-block.html')
-    @@include('components/bem-blocks/global/fances-slider/fances-slider.html',{
-    title: '<span class="font-bold">Калитки</span> и ворота'
+    @@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
+    title: '<span class="font-bold">Популярные</span>  ворота',
+    class: 'catalog-gates-popular'
     })
     @@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
-    title: '<span class="font-bold">Другие виды</span>  металлических заборов',
-    class: 'catalog-metal-popular'
+    title: '<span class="font-bold">Популярная автоматика</span>  для ворот',
+    class: 'catalog-gates-automatic'
     })
+    @@include('components/bem-blocks/global/portfolio-block/portfolio-block.html')
+
     @@include('components/bem-blocks/global/contact-action/contact-action.html')
     @@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
     'class': 'catalog-metal-subscribe'
