--- a/src/catalog-automatic.html
+++ b/src/catalog-automatic.html
@@ -801,6 +801,11 @@
             </ul>
         </div>
     </section>
+    @@include('components/bem-blocks/global/catalog-advantages/catalog-advantages.html')
+    @@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
+    title: '<span class="font-bold">Популярная автоматика </span>  для ворот',
+    class: 'catalog-metal-popular'
+    })
     @@include('components/bem-blocks/global/contact-action/contact-action.html')
     @@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
     'class': 'catalog-metal-subscribe'
