--- a/src/catalog-gates.html
+++ b/src/catalog-gates.html
@@ -947,33 +947,7 @@
                 </div>
             </div>
     </section>
-    <section class="catalog-gates-advantages">
-        <div class="container">
-            <ul class="catalog-gates-advantages__list">
-                <li class="catalog-gates-advantages__list-item">
-                    <div class="catalog-gates-advantages__list-img">
-                        <img data-src="img/catalog-gates/advantages/item-1.svg" class="lazy" alt="advantages">
-                    </div>
-                    <div class="catalog-gates-advantages__list-title">Изготовим за 1 день!</div>
-                    <div class="catalog-gates-advantages__list-text">Нужная информация: общая длина забора, количество ворот и калиток, способ установки столбов, вид материала обшивки каркаса, адрес места монтажа, дополнительные работы.</div>
-                </li>
-                <li class="catalog-gates-advantages__list-item">
-                    <div class="catalog-gates-advantages__list-img">
-                        <img data-src="img/catalog-gates/advantages/item-2.svg" class="lazy" alt="advantages">
-                    </div>
-                    <div class="catalog-gates-advantages__list-title">Выезд инженера на замер бесплатно!</div>
-                    <div class="catalog-gates-advantages__list-text">Нужная информация: общая длина забора, количество ворот и калиток, способ установки столбов, вид материала обшивки каркаса, адрес места монтажа, дополнительные работы.</div>
-                </li>
-                <li class="catalog-gates-advantages__list-item">
-                    <div class="catalog-gates-advantages__list-img">
-                        <img data-src="img/catalog-gates/advantages/item-3.svg" class="lazy" alt="advantages">
-                    </div>
-                    <div class="catalog-gates-advantages__list-title">Оперативный ремонт!</div>
-                    <div class="catalog-gates-advantages__list-text">Нужная информация: общая длина забора, количество ворот и калиток, способ установки столбов, вид материала обшивки каркаса, адрес места монтажа, дополнительные работы.</div>
-                </li>
-            </ul>
-        </div>
-    </section>
+    @@include('components/bem-blocks/global/catalog-advantages/catalog-advantages.html')
     @@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
     title: '<span class="font-bold">Популярные</span>  ворота',
     class: 'catalog-gates-popular'
